--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Hoş Geldiniz</h1>
-    <p>Henüz acemi bir yazılımcı(?)nın ilk web sayfası denemesi.</p>
+    <p>Henüz acemi bir yazılımcı(?)nın ilk web sayfası denemesi.04/01/2025  </p>
   </header>
   <nav>
     <ul>
@@ -19,7 +19,7 @@
           <li><a href="#contact">İletişim</a></li>
         </ul>
       </nav>
-      <title>Fotoğraf Ekleme</title>
+      <title>Fotoğraf Ekleme 05/01/2025</title>
     <style>
         body {
             text-align: center;
@@ -59,6 +59,7 @@
     <form>
       <label for="message">Mesaj:</label>
       <textarea id="message" name="message" required></textarea>
+    <P>CİN OLMADAN ADAM ÇARPMAYA KALKTIM FORMA MESAJ YAZMAYIN</P>
       
       <button type="submit">Gönder</button>
     </form>
