--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basit Web Sayfası</title>
+  <title>İlk Web Sayfam</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>Hoş Geldiniz</h1>
-    <p>Henüz acemi bir yazılımcı(?)nın ilk web sayfası denemesi.04/01/2025  </p>
+    <title>Tarih Ekleme</title>
+</head>
+<body>
+    <h1>Her Yaptığım Eklentiye Tarih Ekleyeceğim Çünkü Bu Benim İlk Eserim</h1>
+    <p>Bugünün Tarihi:04/01/2025 <span id="currentDate"></span></p>
+    <p>Henüz acemi bir yazılımcı(?)nın ilk web sayfası denemesi.0</p>
   </header>
   <nav>
     <ul>
@@ -23,10 +28,10 @@
     <style>
         body {
             text-align: center;
-            margin-top: 50px;
+            margin-top: 20px;
         }
         img {
-            max-width: 80%;
+            max-width: 10%;
             height: auto;
             border: 2px solid #ddd;
             border-radius: 8px;
@@ -56,14 +61,9 @@
 
   <section id="contact">
     <h2>İletişim</h2>
-    <form>
-      <label for="message">Mesaj:</label>
-      <textarea id="message" name="message" required></textarea>
-    <P>CİN OLMADAN ADAM ÇARPMAYA KALKTIM FORMA MESAJ YAZMAYIN</P>
-      
-      <button type="submit">Gönder</button>
-    </form>
-
+    <P>CİN OLMADAN ADAM ÇARPMAYA KALKTIĞIM İÇİN FORM ÇOK UZUN SÜRELİĞİNE KALDIRILMIŞTIR.</P>
+    <p>Bu Eklentinin Tarihi:05/01/2025</p>
+    <p style="color: rgb(255, 0, 0);font-weight: bold;">Yarın Ne Ekleyeceğim Sürpriz Olsun Nasıl Olsa Sevdim Bu İşi</p>
   <footer>
     <p>&copy; 04/01/2008 Meb ilk göreve başlama tarihim 17.Yılım Kutlu Olsun</p>
   </footer>
