--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>İlk Web Sayfam</title>
   <link rel="stylesheet" href="styles.css">
-</head>
 <body>
-  <header>
-    <h1>Hoş Geldiniz</h1>
-    <title>Tarih Ekleme</title>
-</head>
+    <h1 style="background-color: blueviolet;">Hoş Geldiniz</h1>
 <body>
-    <h1>Her Yaptığım Eklentiye Tarih Ekleyeceğim Çünkü Bu Benim İlk Eserim</h1>
-    <p>Bugünün Tarihi:04/01/2025 <span id="currentDate"></span></p>
+    <h1 style="background-color: darkorchid;">Her Yaptığım Eklentiye Tarih Ekleyeceğim Çünkü Bu Benim İlk Eserim</h1>
+    <p>İlk Yayım Tarihi:04/01/2025 <span id="currentDate"></span></p>
+    <p style="color: gold;background-color: dimgray;"> Belki Bana Her Yer Trabzon Değil ama "< title > " Olduğu Kesin 06/01/2025</p>
     <p>Henüz acemi bir yazılımcı(?)nın ilk web sayfası denemesi.0</p>
-  </header>
   <nav>
     <ul>
       
@@ -24,24 +20,21 @@
           <li><a href="#contact">İletişim</a></li>
         </ul>
       </nav>
-      <title>Fotoğraf Ekleme 05/01/2025</title>
     <style>
         body {
             text-align: center;
             margin-top: 20px;
         }
         img {
-            max-width: 10%;
+            max-width: 30%;
             height: auto;
             border: 2px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
-</head>
-<body>
     <h1>Bu İlk Fotoğraf</h1>
-    <img src="1.jpeg.webp" alt="Açıklama burada yer alır" />
+    <img src="1.jpeg.webp"  />
     <p>Resim eklemeyi deniyorum.</p>
   <section id="about">
     <h2>Hakkında</h2>
@@ -50,14 +43,13 @@
 
   <section id="services">
     <h2>Hizmetlerimiz</h2>
-    <ul>
+  <ul style="list-style-type:none;">
       <li>Şu an sadece kendimi geliştiriyorum.</li>
       <li>Tasarım da olacak inşallah ama daha vakit var</li>
       <li>Sadece uğraşıyorum</li>
     </ul>
   </section>
     </tbody>
-</table>
 
   <section id="contact">
     <h2>İletişim</h2>
