--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
   <link rel="stylesheet" href="styles.css">
 <body>
     <h1 style="background-color: blueviolet;">Hoş Geldiniz</h1>
-<body>
-    <h1 style="background-color: darkorchid;">Her Yaptığım Eklentiye Tarih Ekleyeceğim Çünkü Bu Benim İlk Eserim</h1>
+    <h1 style="background-color: rgb(115, 113, 116);">"BÜYÜKLER TEK BAŞLARINA HİÇBİR ŞEYİ ANLAYAMIYORLAR, ÇOCUKLAR İÇİN DE ONLARA AYNI ŞEYLERİ TEKRAR TEKRAR ANLATMAK YORUCU OLUYORDU." "KÜÇÜK PRENS"</h1>
     <p>İlk Yayım Tarihi:04/01/2025 <span id="currentDate"></span></p>
     <p style="color: gold;background-color: dimgray;"> Belki Bana Her Yer Trabzon Değil ama "< title > " Olduğu Kesin 06/01/2025</p>
-    <p>Henüz acemi bir yazılımcı(?)nın ilk web sayfası denemesi.0</p>
+    <p>Henüz acemi bir "yazılımcı"nın ilk web sayfası denemesi.0</p>
   <nav>
     <ul>
-      
           <li><a href="#about">Hakkında</a></li>
           <li><a href="#services">Hizmetler</a></li>
           <li><a href="#contact">İletişim</a></li>
         </ul>
       </nav>
     <style>
-        body {
+       body {
             text-align: center;
             margin-top: 20px;
         }
@@ -33,9 +31,9 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
-    <h1>Bu İlk Fotoğraf</h1>
-    <img src="1.jpeg.webp"  />
-    <p>Resim eklemeyi deniyorum.</p>
+    <img src="2.jpeg.webp" alt="Günün Resmi">
+    <p style="font-weight: bold;">GÜNÜN RESMİ</p>
+    <p>Bazen çok küçük bir noktada takılıyorum.</p>
   <section id="about">
     <h2>Hakkında</h2>
     <p>Bu benim yaptığım ilk web sayfasıdır. html,css ve java script kullanmayı amaçladım ; ancak ne ölçüde doğru kullandığıma dair henüz bir fikrim yok.</p>
@@ -49,15 +47,16 @@
       <li>Sadece uğraşıyorum</li>
     </ul>
   </section>
-    </tbody>
 
   <section id="contact">
     <h2>İletişim</h2>
     <P>CİN OLMADAN ADAM ÇARPMAYA KALKTIĞIM İÇİN FORM ÇOK UZUN SÜRELİĞİNE KALDIRILMIŞTIR.</P>
     <p>Bu Eklentinin Tarihi:05/01/2025</p>
     <p style="color: rgb(255, 0, 0);font-weight: bold;">Yarın Ne Ekleyeceğim Sürpriz Olsun Nasıl Olsa Sevdim Bu İşi</p>
+    <P>DİĞER SAYFAYA GİTMEK İÇİN ŞANSINIZI DENEYEBİLİRSİNİZ</P>
+    <a href="2.sayfa.html"> DİĞER SAYFAYA GEÇİNİZ</a>
   <footer>
-    <p>&copy; 04/01/2008 Meb ilk göreve başlama tarihim 17.Yılım Kutlu Olsun</p>
+    <p>&copy; BURAYA ŞİMDİLİK BİR ŞEY BULAMADIM</p>
   </footer>
 </body>
 </html>
