--- a/2.sayfa.html
+++ b/2.sayfa.html
@@ -9,8 +9,9 @@
 <body>
  <p>Önceki Sayfaya Dönmek İçin İyi Düşünün 
     <a href="index.html">ÖNCEKİ SAYFA</a>
-    <p style="color: darkturquoise;background-color: black;"> Çok merak ediyorum double junior bir yazılımcının ilk web sayfası denemesinde bu sayfaya geçerken ne umdunuz? Daha çok yolum ve çok umudum var.</p>
+    <p style="color: darkturquoise;background-color: black;"> İlerlemeye devam</p>
  </p>
+ <a href="https://www.youtube.com/watch?v=6Z2sVk2qahI"</a> <p>Dinlemek ve eğlenmek için tıklayınız. Reklam için üzgünüm</p>
   <footer>+
     <p>&copy; BURAYA ŞİMDİLİK BİR ŞEY BULAMADIM</p>
   </footer>
