--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 <body>
     <h1 style="background-color: blueviolet;">Hoş Geldiniz</h1>
-    <h1 style="background-color: rgb(115, 113, 116);">"BÜYÜKLER TEK BAŞLARINA HİÇBİR ŞEYİ ANLAYAMIYORLAR, ÇOCUKLAR İÇİN DE ONLARA AYNI ŞEYLERİ TEKRAR TEKRAR ANLATMAK YORUCU OLUYORDU." "KÜÇÜK PRENS"</h1>
+    <h1 style="background-color: rgb(115, 113, 116);"> BOŞUNADIR SAĞIR KULAKLARA SÖYLENEN AKILLICA SÖZLER</h1>
     <p>İlk Yayım Tarihi:04/01/2025 <span id="currentDate"></span></p>
     <p style="color: gold;background-color: dimgray;"> Belki Bana Her Yer Trabzon Değil ama "< title > " Olduğu Kesin 06/01/2025</p>
-    <p>Henüz acemi bir "yazılımcı"nın ilk web sayfası denemesi.0</p>
+    <p>Henüz acemi bir "yazılımcı"nın ilk web sayfası denemesi.</p>
   <nav>
     <ul>
           <li><a href="#about">Hakkında</a></li>
@@ -51,10 +51,9 @@
   <section id="contact">
     <h2>İletişim</h2>
     <P>CİN OLMADAN ADAM ÇARPMAYA KALKTIĞIM İÇİN FORM ÇOK UZUN SÜRELİĞİNE KALDIRILMIŞTIR.</P>
-    <p>Bu Eklentinin Tarihi:05/01/2025</p>
-    <p style="color: rgb(255, 0, 0);font-weight: bold;">Yarın Ne Ekleyeceğim Sürpriz Olsun Nasıl Olsa Sevdim Bu İşi</p>
-    <P>DİĞER SAYFAYA GİTMEK İÇİN ŞANSINIZI DENEYEBİLİRSİNİZ</P>
-    <a href="2.sayfa.html"> DİĞER SAYFAYA GEÇİNİZ</a>
+    
+    <a href="2.sayfa.html" <p>Bu Eklentinin Tarihi:05/01/2025</p>
+     GÜNÜN ŞARKISI İÇİN DİĞER SAYFAYA GEÇİNİZ</a>
   <footer>
     <p>&copy; BURAYA ŞİMDİLİK BİR ŞEY BULAMADIM</p>
   </footer>
