--- a/2.sayfa.html
+++ b/2.sayfa.html
@@ -9,11 +9,10 @@
 <body>
  <p>Önceki Sayfaya Dönmek İçin İyi Düşünün 
     <a href="index.html">ÖNCEKİ SAYFA</a>
-    <p style="color: darkturquoise;background-color: black;"> İlerlemeye devam</p>
- </p>
- <a href="https://www.youtube.com/watch?v=6Z2sVk2qahI"</a> <p>Dinlemek ve eğlenmek için tıklayınız. Reklam için üzgünüm</p>
-  <footer>+
-    <p>&copy; BURAYA ŞİMDİLİK BİR ŞEY BULAMADIM</p>
+    <p style="color: darkturquoise;background-color: black;font-weight;font-family: 'Courier New', Courier, monospace;text-align: center;"> İlerlemeye devam</p>
+ <a href="https://www.youtube.com/watch?v=6Z2sVk2qahI"  <p style="font-weight: bold;"></p> <p>Dinlemek ve eğlenmek için tıklayınız. Reklam için üzgünüm</p></a>
+  <footer>
+    <p>&copy; UMUT İNSANI YAŞATIR</p>
   </footer>
 </body>
 </html>
