--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <a href="2.sayfa.html" <p>Bu Eklentinin Tarihi:05/01/2025</p>
      GÜNÜN ŞARKISI İÇİN DİĞER SAYFAYA GEÇİNİZ</a>
   <footer>
-    <p>&copy; BURAYA ŞİMDİLİK BİR ŞEY BULAMADIM</p>
+    <p>&copy; UMUT İNSANI YAŞATIR</p>
   </footer>
 </body>
 </html>
